# square_logger

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  example.py  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  pytest.yaml
square_logger/: __init__.py  configuration.py  main.py
square_logger/data/: config.ini
tests/: conftest.py  test_auto_logger.py
